zephyr/static/styles/zephyr.css
/* ... */
/* Override padding-top on form labels when they label only text */
.form-horizontal .label_for_text {
    padding-top: 0;
}

#pw_change_controls {
    display: none;
}

.humbug-icon-star {
    background-position: -121px 0 !important;
    padding-right: 0.09em !important; /* Alignment hack to line up with other icons */
}

.sub-unsub-message, .date_row {
    text-align: center;
    padding-bottom: 10px; /* same as .bookend */
}

.date_row span{
    display: block;
    background: inherit;
    padding: 4px;
    overflow: hidden;
    text-transform: uppercase;
    font-size: 0.8em;
    color: #bbb;
    text-shadow: 1px 1px 0px #fff;
}

.date_row span:before,
.date_row span:after{
    display: inline-block;
    position: relative;
    content: " ";
    vertical-align: middle;
    width: 50%;
    height: 0px;
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #fff;
}

.date_row span:before{
    right: 0.5em;
    margin-left: -50%;
}

.date_row span:after{
    left: 0.5em;
    margin-right: -50%;
}

#restore-draft {
    float: left;
    display: none;
    margin-right: 1em;
}

#restore-draft:hover {
    cursor:  pointer;
}

#compose a.message-control-button {
    display: block;
    color: #777;
    text-decoration: none;
    font-size: 14px;
    width: 14px;
    height: 14px;
    margin-right: 5px;
    border-radius: 2px;
    text-align: center;
    float: right;
}

#compose a.message-control-button:hover {
    color: #000;
}

#stream_filters {
    font-weight: normal;
}

#stream_filters .inactive_stream {
    opacity: .5;
}

#bots_list {
    display: none;
    font-size: 90%;
    list-style-type: none;
    width: 550px;
    margin-left: 0px;
}

#bots_list .image, 
#bots_list .bot_info {
    display: inline-block;
    margin: 10px;
}

#bots_list .image {
    vertical-align: top;
}

#bots_list .name {
    font-weight: bold;
    font-size: 130%;
}

#bots_list .field:after {
    content: ':';
}

.bot_info .field {
    width: 7em;
    display: inline-block;
}

#create_bot_form .control-label {
    width: 10em;
    text-align: left;
    margin-right: 3px;
}

#create_bot_button {
    margin-left: 24em;
}

#bot_avatar_clear_button {
    display: none;
}

#create_bot_name {
    width: 20em;
}

#create_bot_short_name {
    width: 7em;
}

.bot_name_header {
    width: 8em;
}

#bots_list img.avatar {
    height: 35px;
    width: 35px;
}

#bots_list .email .value,
#bots_list .api_key .value {
    font-family: monospace;
    font-size: 85%;
}

#onboarding-header {
    font-size: 16px;
    font-weight: bold;
    text-align: center;
}
#onboarding-checklist {
    font-size: 14px;
    border: 1px solid #ddd;
    background-color: #F7F7F7;
    padding: 10px;
}
#onboarding {
    display: none;
}

.onboarding_success {
    font-size: 40px;
    color: #00CC00;
    text-align: center;
}

#sticky-popover h1 {
    text-align: center;
}
.done-button {
    text-align: center;
}
.sticky-popover-inner {
    max-width: 300px;
}
.sticky-popover-inner p {
    padding-bottom: 5px;
}

#feedback_section {
    text-align: center;
    padding-bottom: 10px;
}

.message_edit {
    display: none;
}

/* Reduce some of the heavy padding from Bootstrap. */
#message_edit_form .edit-control-label {
    width: auto;
    float: left;
}
#message_edit_form .edit-controls {
    margin-left: 50px;
}
#message_edit_form textarea {
    width: 90%;
    min-width: 206px;
}

.message_edit_notice {
    font-size: 11px;
}

.message_body_gravatar {
    width: 20px;
    height: 20px;
    margin: 2px 2px 2px 0px;
    border: 1px solid #000;
}

.user-mention {
    background: #eee;
    border-radius: 6px;
    padding: 0px 0.3em;
    border: 1px solid #ccc;
    font-weight: bold;
}

.user-mention-me {
    background: #58F;
    color: white;
    border-color: #7080A5;
}

#notification-settings .control-group {
    margin-bottom: 5px;
}

#notification-settings .control-label {
    width: 280px;
    text-align: left;
}

#pin_info_question {
    padding-left: 3px;
}
#pin_info_question:hover {
    cursor:  pointer;
}

.zero_count {
    display: none;
}

.message-pane {
    padding-left: 0.3em;
}

.screen {
    position: absolute;
    left: 0;
    top: 0;
    background: #000;
    z-index: 20000;
}

.tutorial-popover {
    width: 200px;
}

#tutorial-stream {
    width: 250px;
}

#tutorial-subject {
    width: 250px;
}
.tutorial-done-button {
    text-align: right;
}

